refactor: resolve IDE warnings and clean up code debt